--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.6",
+    "@heroui/use-infinite-scroll": "^2.2.7",
     "@heroui/use-theme": "^2.1.6",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
