--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "postprocessing": "^6.37.2",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-infinite-scroll-hook": "^5.0.2",
     "react-starfield": "^1.0.3",
+    "react-syntax-highlighter": "^15.6.1",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.15"
   },
@@ -33,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
