--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@iconify-icon/react": "^2.3.0",
+    "@types/date-fns": "^2.6.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
