--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-infinite-scroll-hook": "^5.0.2",
     "react-starfield": "^1.0.3",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.3",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.15"
   },
