--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "jsqr": "^1.4.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "postprocessing": "^6.37.2",
