--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@supabase/supabase-js": "^2.49.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jsqr": "^1.4.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
