--- a/package.json
+++ b/package.json
@@ -24,15 +24,14 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jsqr": "^1.4.0",
-    "next": "15.2.4",
+    "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "postprocessing": "^6.37.2",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-infinite-scroll-hook": "^5.0.2",
     "react-starfield": "^1.0.3",
-    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.15"
