--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "supabase": "^2.24.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
