feat: Enhance inventory management with unit conversion and grouping functionalities
- Added utility functions for unit conversion, including support for length, mass, volume, area, and count.
- Implemented functions to group inventory items by group_id and manage group sizes.
- Introduced new database tables for delivery items, warehouse inventory, and warehouse inventory items.
- Updated existing inventory and inventory items tables to include new fields for standard units and aggregated values.
- Created triggers and functions to maintain inventory aggregations and status history.
- Enhanced policies for inventory and inventory items to ensure proper access control.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-starfield": "^1.0.3",
     "recharts": "^2.15.3",
     "three": "^0.175.0",
-    "three-stdlib": "^2.35.15"
+    "three-stdlib": "^2.35.15",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@iconify-icon/react": "^2.3.0",
