--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "groq-sdk": "^0.25.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jsqr": "^1.4.0",
