--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "postprocessing": "^6.37.2",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -43,6 +44,7 @@
     "@iconify/react": "6.0.0",
     "@types/date-fns": "^2.6.3",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
