--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/keepalive",
       "schedule": "0 12 * * 0"
+    },
+    {
+      "path": "/api/test-cron",
+      "schedule": "*/5 * * * *"
     }
   ],
   "functions": {
@@ -10,6 +14,9 @@
       "maxDuration": 10
     },
     "src/app/api/keepalive-alt/route.ts": {
+      "maxDuration": 10
+    },
+    "src/app/api/test-cron/route.ts": {
       "maxDuration": 10
     }
   }
